--- a/src/index.html
+++ b/src/index.html
@@ -12,9 +12,9 @@
 	  <link href="https://maxcdn.bootstrapcdn.com/bootswatch/3.3.6/cerulean/bootstrap.min.css" rel="stylesheet">
 	
 	  <!-- Custom Fonts -->
-	  <link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
-	  <link href="http://fonts.googleapis.com/css?family=SourceSansPro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
-	</head>
+	  <!--<link href="font-awesome/css/font-awesome.min.css" rel="stylesheet" type="text/css">
+	  <link href="//fonts.googleapis.com/css?family=SourceSansPro:300,400,700,300italic,400italic,700italic" rel="stylesheet" type="text/css">
+	--></head>
 
 <body>
   <!-- Navigation -->
